force-app/main/default/objects/Question_Category__c/Question_Category__c.object-meta.xml
<CustomObject>
    <description>Parent object - Master object</description>
    <label>Question Category</label>
    <nameField>
        <label>Question Category Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Questions Category</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>