force-app/main/default/objects/Question_Category__c/fields/QC_Number__c.field-meta.xml
<CustomField>
    <fullName>QC_Number__c</fullName>
    <displayFormat>QC-{000}</displayFormat>
    <label>QC Number</label>
    <type>AutoNumber</type>
</CustomField>