force-app/main/default/objects/Question_Category__c/fields/Total_Section__c.field-meta.xml
<CustomField>
    <fullName>Total_Section__c</fullName>
    <label>Total Section</label>
    <summaryForeignKey>Question_Section__c.Question_Category__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>