force-app/main/default/objects/Question_Category__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Quality Indicator</fullName>
            </value>
            <value>
                <fullName>Consumer Experience Interview</fullName>
            </value>
            <value>
                <fullName>Quality Standard</fullName>
            </value>
            <value>
                <fullName>Care Minutes</fullName>
            </value>
            <value>
                <fullName>Residential Viability and Prudential Reporting</fullName>
            </value>
            <value>
                <fullName>Home Care Viability and Prudential Reporting</fullName>
            </value>
            <value>
                <fullName>Quality Indicator Targets</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>